--- a/JS/fadeOutElements.html
+++ b/JS/fadeOutElements.html
@@ -20,12 +20,26 @@
     <h1>Hello, World!</h1>
     <p>This div will fade out as you scroll.</p>
   </div>
-  <p>Garbage content just to show the effect in action</p>
-  <p>Garbage content just to show the effect in action</p>
-  <p>Garbage content just to show the effect in action</p>
-  <p>Garbage content just to show the effect in action</p>
-  <p>Garbage content just to show the effect in action</p>
-  <p>Garbage content just to show the effect in action</p>
+  <div>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+    <p>Garbage content just to show the effect in action</p>
+  </div>
 <script>
   $(window).scroll(function(){
     $(".fade-out").css("opacity", 1 - $(window).scrollTop() / 800);
